corrected link to image

--- a/practice2.html
+++ b/practice2.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Samson & Bailey</h1>
         <p>Hi, We are the best dogs in the world! In the world Craig!  Woof woof!</p>
-        <img src= "../aSSIGN2/samson_bailey.jpg" alt="picture of two dogs named Samson and Bailey" style="width:200px;height:250px; ">
+        <img src="samson_bailey.jpg" alt="picture of two dogs named Samson and Bailey" style="width:200px;height:250px; ">
         <h3>Some of my favorite places</h3>
             <ul>
                 <li>Doggie Park</li>
