added folder structure and favicon

--- a/assign4/index.html
+++ b/assign4/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<!-- saved from url=(0069)file:///C:/Users/niquewill44/Desktop/HTML_practice/assign4/index.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<html>
+
+<head>
+    <!--Priority Meta tags-->
+    <meta charset="UTF-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge; chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,  user-scalable=no">
+    <meta name="Sample Contact Form">
     <title>Contact Form</title>
-    <link rel="=icon" href="images/favicon.ico" size="32 x 32" type="image/icon">
-    <link rel="style" href="css/style.css">
+        <link rel="icon" type="image/svg+xml" href="assets/images/favicon-32x32.png">
+        <!--Stylesheets link-->
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css"
+        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+        <link href="https://fonts.googleapis.com/css?family=Manuale|Montserrat" rel="stylesheet">
+        <!--Import Google Icon Font-->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!--Import materialize.css-->
+        <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+            integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        <link href="/your-patauto;h-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+        <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
+        <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet"
 </head>
 <body>
     <h1>Register</h1>
