changed background image and added keyframes

--- a/assign4/techskills.html
+++ b/assign4/techskills.html
@@ -26,13 +26,29 @@
     <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
     <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
 </head>
-<body>
+    <body>
+        <header>
+            <div class="container">
+                <nav>
+                    <h1 class="logo">Queen<a href="index.html">B</span></a>Code</h1>
+                    <ul>
+                        <li><a href="../assign4/index.html">Home</a></li>
+                        <li><a href="../assign4/Portfolio.html">Portfolio</a></li>
+                        <li><a href="../assign4/about.html">About</a></li>
+                        <li><a href="../assign4/contactme.html">Contact</a></li>
+                        <li><a href="../assign4/techskills.html">Tech Skill Level</a></li>
+                        <li><a href="../assign4/blog.html">Blog</a></li>
+
+                    </ul>
+                </nav>
+            </div>
+        </header>tk
 
     <h1>Technical Skills</h1>
 
     <p>Everyday I wake up with the anticipation to code.  It's difficult to explain, but it's a release of my energy.  I am thinking, reasoning, creating, building, and living through code.  Check out how I'm doing below:</p>
 
-    <div id="div1">HTML                                             80%</div><br>
+    <div id="div1">HTML80%</div><br>
     <div id="div2">CSS3</div><br>
     <div id="div3">JavaScript</div><br>
     <div id="div4">React</div><br>
