--- a/assign4/contactme.html
+++ b/assign4/contactme.html
@@ -1,3 +1,48 @@
+ <!DOCTYPE html>
+ <html>
+
+ <head>
+     <!--Priority Meta tags-->
+     <meta charset="UTF-8">
+     <meta http-equiv="x-ua-compatible" content="ie=edge; chrome=1">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0,  user-scalable=no">
+     <meta name="Sample Contact Form">
+     <title>Contact Form</title>
+     <link rel="icon" type="image/svg+xml" href="assets/images/favicon-32x32.png">
+     <!--Stylesheets link-->
+     <link rel="stylesheet" type="text/css" href="assets/css/indexstyle.css">
+     <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
+     <!-- Bootstrap CSS -->
+     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Manuale|Montserrat">
+     <!--Import Google Icon Font-->
+     <link href="https://fonts.googleapis.com/css?family=Anton|Archivo+Black|Maven+Pro:900|Ubuntu:700&display=swap"
+         rel="stylesheet">
+     <!--Import materialize.css-->
+     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+     <link href="/your-patauto;h-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+     <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
+     <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
+ </head>
+    <body>
+        <header>
+            <div class="container">
+                <nav>
+                    <h1 class="logo">Queen<a href="index.html">B</span></a>Code</h1>
+                    <ul>
+                        <li><a href="../assign4/index.html">Home</a></li>
+                        <li><a href="../assign4/Portfolio.html">Portfolio</a></li>
+                        <li><a href="../assign4/about.html">About</a></li>
+                        <li><a href="../assign4/contactme.html">Contact</a></li>
+                        <li><a href="../assign4/techskills.html">Tech Skill Level</a></li>
+                        <li><a href="../assign4/blog.html">Blog</a></li>
+
+                    </ul>
+                </nav>
+            </div>
+        </header>
  <h1><strong>Register</strong></h1>
  <div class="row no-gutters">
      <div class="col-md-6 no-gutters">
