--- a/assign4/index.html
+++ b/assign4/index.html
@@ -28,22 +28,25 @@
     </head> 
     <body>
         <header>
-            <div class="container">
+            <div class="container-1">
+                <img src="../assign4/assets/images/logo.svg">
                 <nav>
                     <h1 class="logo">Queen<a href="index.html">B</span></a>Code</h1>
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Portfolio</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Blog</a></li>
+                        <li><a href="../assign4/index.html">Home</a></li>
+                        <li><a href="../assign4/Portfolio.html">Portfolio</a></li>
+                        <li><a href="../assign4/about.html">About</a></li>
+                        <li><a href="../assign4/contactme.html">Contact</a></li>
+                        <li><a href="../assign4/techskills.html">Tech Skill Level</a></li>
+                        <li><a href="../assign4/blog.html">Blog</a></li>
 
                         </ul>
                 </nav>
             </div>
         </header>
+
         <footer>
-            
+
         </footer>
 
       
